доделан начальный визуал (2)

--- a/mainView/main-front/public/index.html
+++ b/mainView/main-front/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <meta name="vieport" content="width=device-width, intial-scale=1" />
-        <title>FinView</title>
+        <link rel="icon" href="./mainIco.ico"/>
+        <title>FinanceView</title>
     </head>
 
     <body>
